# TetriSpace

./: .dockerignore  .gitignore  CHANGES.md  Dockerfile  README.md
.github/: pull_request_template.md
.github/workflows/: build.yml
src/dakae_action/: package.xml  setup.cfg  setup.py
src/dakae_action/dakae_action/: pick_place_action_client.py  pick_place_action_client_loop.py  pick_place_action_server.py
src/dakae_bringup/: CMakeLists.txt  package.xml
src/dakae_bringup/config/: vision_params.yaml
src/dakae_bringup/launch/: system.launch.py  vision_only.launch.py
src/dakae_bringup/scripts/: dakae_helper.py
src/dakae_interfaces/: CMakeLists.txt  package.xml
src/dakae_interfaces/action/: PickAndPlace.action
src/dakae_interfaces/msg/: CubeInfo.msg  MarkerInfo.msg  ObjectInfo.msg  TaskInfo.msg
src/dakae_interfaces/srv/: DetectCubes.srv  DetectMarkers.srv  DetectObjects.srv  ExecuteTasks.srv  MoveGripper.srv
src/dakae_vision/: package.xml  readme  requirements.txt  setup.cfg  setup.py
src/dakae_vision/dakae_vision/: camera_node.py  cube_service_server.py  marker_service_server.py  marker_service_server_offset.py  object_contour_service_server.py
src/dakae_vision/launch/: cube_vision.launch.py  full_vision.launch.py  marker_vision.launch.py
src/dsr_gripper_tcp/: README.md  package.xml
src/dsr_gripper_tcp/dsr_gripper_tcp/: example_gripper_tcp.py  gripper_service_node.py  gripper_tcp_bridge.py  web_dashboard.py  web_dashboard_node.py
src/dsr_gripper_tcp/launch/: gripper_service_node.launch.py  (+1 more)
src/test_first/: package.xml  setup.cfg  setup.py
(+173 files in other folders)
